<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="right"
        android:transitionName="logo_image"
        app:srcCompat="@drawable/data_extraction_rafiki"></ImageView>

    <TextView
        android:id="@+id/logoName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bungee"
        android:transitionName="logo_text"
        android:text="@string/bienvenue"
        android:textColor="@color/MycalorforApp"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:fontFamily="@font/aladin"
            android:gravity="center"
            android:text="@string/accountInformation"
            android:textColor="#FF9E80"
            android:textSize="24sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="30dp">

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFECB3"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="12sp"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/username"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="20sp"
                                android:fontFamily="@font/bungee"
                                android:text="@string/username"
                                android:textColor="#EF6C00"
                                android:textSize="12sp" />

                            <TextView
                                android:id="@+id/usernameTextView"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5sp"
                                android:layout_marginTop="5sp"
                                android:layout_marginRight="5sp"
                                android:fontFamily="@font/aladin"
                                android:gravity="center"
                                android:textColor="#FFAB40"
                                android:textSize="22sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:layout_marginLeft="5sp"
                            android:layout_marginBottom="5sp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/password"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10sp"
                                android:fontFamily="@font/bungee"
                                android:text="@string/password"
                                android:textColor="#EF6C00"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/passwordText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5sp"
                                android:layout_marginRight="5sp"
                                android:fontFamily="@font/aladin"
                                android:gravity="center"
                                android:textColor="#FFAB40"
                                android:textSize="22sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/MycalorforApp"
            android:fontFamily="@font/antic"
            android:hint="@string/deconnect"
            android:includeFontPadding="false"
            android:isScrollContainer="false"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="40sp"
            app:iconGravity="end"
            app:iconSize="30dp"
            app:iconTintMode="src_in"
            android:onClick="retour"/>

    </LinearLayout>

</LinearLayout>